tests/negative/runtime/bytes_to_int_wrong_size/input.ci
void main(string[] args) {
    print(toString(bytesToInt([0x01, 0x02])) + "\n");
}
